--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ entorno_virtual/
 *.pyc
 __pycache__/
 .env
+image.png
+image-1.png
+Zmachine_lerning.md
 
 # Ignorar el archivo de configuración de VS Code
 .vscode/
